# AIRS-REDCHECK

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_normalized_import_model.py  0002_mapping_profiles.py  0003_portkey_gateway_profiles.py  0004_evaluation_errors.py  0005_evaluation_jobs.py  0006_comparison_statuses.py  0007_human_reviews.py  0008_judge_configuration.py  0009_project_workspaces.py  0010_alarm_threat_review_decision.py
backend/app/: main.py
backend/app/api/: datasets.py  evaluation_jobs.py  judge_prompt_profiles.py  mapping_profiles.py  portkey_gateway_profiles.py  projects.py  results.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attempt.py  dataset.py  evaluation_error.py  evaluation_job.py  evaluation_job_attempt.py  human_review.py  import_error.py  judge_prompt_profile.py  judge_result.py  mapping_profile.py  portkey_gateway_profile.py  project.py  stream.py  types.py
backend/app/parsers/: __init__.py  agent_json.py  base.py  csv_loader.py  detection.py  flat_mapping.py  normalization.py  static_json.py
backend/tests/: conftest.py  test_agent_json_parser.py  test_comparison.py  test_evaluation_jobs.py  test_flat_mapping_parser.py  test_human_reviews_api.py  test_import_api.py  test_judge_adapter.py  test_judge_prompt_profiles.py  test_models.py  test_portkey_gateway_profiles.py  test_projects_api.py  test_results_api.py  test_static_json_parser.py
docs/: PRD.md  (+3 more)
(+55 files in other folders)
